syntax = "proto3";
option csharp_namespace = "StoreWebAPI.Application.Category";
import "google/protobuf/wrappers.proto";
package store;

message NewCategoryRequest {
	string name=1;	
}

message NewCategoryResponse{
	int32  id =1;
	string name=2;	
	string created_at = 3;	
}
message EditCategoryRequest {
	int32  id =1;
	string name=2;	
}
message DeleteCategoryRequest{
	int32  id =1;
}
message DeleteCategoryResponse{
	bool   success = 1;
    string message = 2;
}
message ListCategoriesRequest{
	google.protobuf.StringValue  name=1 ;
}
message ListCategoriesResponse{
	repeated NewCategoryResponse Category =1;
}
message getCategoryDataByIdRequest {
	int32  id =1;	
}

